--- a/App.css
+++ b/App.css
@@ -40,6 +40,7 @@ body {
       letter-spacing: 2px;
       line-height: 1.3px;
       font-family: 'Roboto Slab', serif;
+      line-height: 25px
   }
 
   .title-container__subtitle {
